--- a/views/List.ejs
+++ b/views/List.ejs
@@ -12,6 +12,10 @@
       <li>Go to school </li>
       <li>Go back home</li>
       <li>Let me be mad</li>
+      
+     <% for (let i = 0; i<newListItem.length; i++){ %>  
+        <li> <%= newListItem[i] %> </li>
+      <% }  %> 
     </ul>
 
     <form action="/" method="post">
