--- a/views/List.ejs
+++ b/views/List.ejs
@@ -4,22 +4,25 @@
     <meta charset="UTF-8" />
     <title>Document</title>
   </head>
-
   <body>
 
-    <h1><%= date %> </h1>
-    <ul>      
-     <% for (let i = 0; i<newListItem.length; i++){ %>  
-        <li> <%= newListItem[i] %> </li>
-      <% }  %> 
-    </ul>
+    <div>
+      <h1> <%= listTitle %> </h1>
+    </div>
+     
+      
+  <% for (let i = 0; i < listItems.length; i++) {  %>
+
+    <p><%= listItems[i] %>  </p>
+  
+  <% }  %>      
+
 
     <form action="/" method="post">
-        <input type="text" name="newTask" placeholder="Enter new task">
+        <input type="text" name="newItem" placeholder="New Item">
+        <!-- made the name of the button list because i'll be changing lists dynamically -->
+        <button type="submit" name="list" value=<%= listTitle %> >+</button>
     </form>
-
-
-
 
 
   </body>
